aggregations + fixes