@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -45,7 +44,7 @@ public class VehicleService {
         List<Vehicle> vehicles = (List<Vehicle>) vehicleRepository.findAll();
         return vehicles.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public VehicleDTO getVehicleById(Long id) {
